[package]
name = "floating-cat"
version = "0.1.1"
edition = "2021"
authors = ["beetle"]
license = "MIT"
description = "allows floats to be categorized"
repository = "https://github.com/Mearkatz/float-classify"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.0"
